<?xml version="1.0" encoding="utf-8"?>

<ScrollView

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="35dp"
        tools:layout_editor_absoluteY="108dp">

        <TextView
            android:id="@+id/Txt_vista1"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:background="#4079EC"

            android:text="@string/registro"

            android:gravity="center"


            android:textColor="#FFFFFF"
            android:textSize="34sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <EditText
            android:id="@+id/txt_usuR"
            android:layout_width="308dp"
            android:layout_height="43dp"
            android:layout_marginStart="64dp"
            android:layout_marginTop="88dp"
            android:ems="10"
            android:inputType="text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Txt_vista1" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="64dp"
            android:layout_marginTop="124dp"

            android:text="@string/ingresar_nombre_registro"



            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView

            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="64dp"
            android:layout_marginTop="228dp"
            android:text="@string/ingresar_apellido_registro"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editTextText2"
            android:layout_width="308dp"
            android:layout_height="43dp"
            android:layout_marginStart="64dp"
            android:layout_marginTop="272dp"
            android:ems="10"
            android:inputType="text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/Txt_perfil"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="64dp"
            android:layout_marginTop="328dp"
            android:text="@string/ingresar_correo_registro"



            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editTextTextEmailAddress"
            android:layout_width="306dp"
            android:layout_height="45dp"
            android:layout_marginStart="56dp"
            android:layout_marginTop="324dp"
            android:ems="10"
            android:inputType="textEmailAddress"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="64dp"

            android:layout_marginTop="436dp"
            android:text="@string/ingresar_contraseña_registro"


            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/txt_contraR"
            android:layout_width="303dp"
            android:layout_height="42dp"
            android:layout_marginStart="56dp"
            android:layout_marginTop="420dp"
            android:ems="10"
            android:inputType="textPassword"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btn_registrarR"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginStart="144dp"
            android:layout_marginTop="84dp"
            android:backgroundTint="#DF3939"
            android:text="@string/Registrarse_registro"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textView6" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="68dp"
            android:layout_marginTop="552dp"
            android:text="@string/confirme_contraseña_registro"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="104dp"
            android:layout_marginTop="44dp"
            android:text="@string/no_cuenta_registro"
            app:layout_constraintStart_toStartOf="parent" />





    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>