<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context=".MainActivity">


    <Button
        android:id="@+id/btn_Cancelar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="184dp"
        android:backgroundTint="#00FFFFFF"
        android:text="@string/cancelar_food"
        android:textColor="#BFA181"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_guardar"
        app:layout_constraintHorizontal_bias="0.48"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/btn_guardar"
        android:layout_width="158dp"
        android:layout_height="50dp"
        android:layout_marginEnd="36dp"
        android:layout_marginBottom="184dp"
        android:backgroundTint="#178582"
        android:text="@string/guardar_food"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/opciones_food"
        android:textColor="#B5FFFFFF"
        android:textSize="26sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.499" />

    <HorizontalScrollView
        android:id="@+id/horizontalScrollView"
        android:layout_width="422dp"

        android:layout_height="106dp"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.969">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:layout_editor_absoluteY="43dp">


            <ImageView
                android:id="@+id/btn_mCarne"
                android:layout_width="128dp"

                android:layout_height="104dp"
                android:layout_weight="1"
                android:src="@mipmap/mucha_carne" />


            <ImageView
                android:id="@+id/pocacarne"
                android:layout_width="108dp"
                android:layout_height="match_parent"

                android:layout_marginLeft="20dp"
                android:layout_weight="1"
                android:src="@mipmap/poca_carne" />


            <ImageView
                android:id="@+id/btn_mPescado"
                android:layout_width="108dp"
                android:layout_height="match_parent"

                android:layout_marginLeft="20dp"
                android:layout_weight="1"
                android:src="@mipmap/pez" />





            <ImageView
                android:id="@+id/btn_Vegano"
                android:layout_width="108dp"
                android:layout_height="match_parent"

                android:layout_marginLeft="20dp"
                android:layout_weight="1"
                android:src="@mipmap/vegano" />


        </LinearLayout>
    </HorizontalScrollView>

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        android:text="@string/consumo_alimentos_food"
        android:textColor="#BFA181"
        android:textSize="25sp"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="42dp" />

</androidx.constraintlayout.widget.ConstraintLayout>