<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#010209">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cuanto_viajaste_journey"
        android:textColor="#B5FFFFFF"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.111"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Txt_vista1" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="412dp"
        android:layout_height="438dp"
        android:background="#A9222222"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.555"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.543">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/como_viajaste_journey"
            android:textColor="#B5FFFFFF"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="@+id/scrollView"
            app:layout_constraintHorizontal_bias="0.072"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <HorizontalScrollView
            android:id="@+id/scrollView"
            android:layout_width="422dp"
            android:layout_height="98dp"
            app:layout_constraintBottom_toTopOf="@+id/textInputLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView6"
            app:layout_constraintVertical_bias="0.029">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#00FFFFFF"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/auto"
                    android:layout_width="99dp"

                    android:layout_height="81dp"
                    android:layout_weight="1"
                    android:src="@mipmap/auto" />

                <ImageView
                    android:id="@+id/tren"
                    android:layout_width="83dp"

                    android:layout_height="81dp"
                    android:layout_marginLeft="20dp"
                    android:layout_weight="1"
                    android:src="@mipmap/tren" />

                <ImageView
                    android:id="@+id/bicicleta"
                    android:layout_width="83dp"

                    android:layout_height="81dp"
                    android:layout_marginLeft="20dp"
                    android:layout_weight="1"
                    android:src="@mipmap/bicicleta" />


                <ImageView
                    android:id="@+id/bus"
                    android:layout_width="83dp"

                    android:layout_height="81dp"
                    android:layout_marginLeft="20dp"
                    android:layout_weight="1"
                    android:src="@mipmap/bus" />

                <ImageView
                    android:id="@+id/moto"
                    android:layout_width="83dp"

                    android:layout_height="81dp"
                    android:layout_marginLeft="20dp"
                    android:layout_weight="1"
                    android:src="@mipmap/moto" />

                <ImageView
                    android:id="@+id/avion"
                    android:layout_width="83dp"

                    android:layout_height="81dp"
                    android:layout_marginLeft="20dp"
                    android:layout_weight="1"
                    android:src="@mipmap/avion" />


                <ImageView
                    android:id="@+id/caminar"
                    android:layout_width="83dp"

                    android:layout_height="81dp"
                    android:layout_marginLeft="20dp"
                    android:layout_weight="1"
                    android:src="@mipmap/caminar" />


            </LinearLayout>
        </HorizontalScrollView>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout"
            android:layout_width="410dp"
            android:layout_height="wrap_content"
            android:hint="Distance"
            tools:layout_editor_absoluteX="1dp"
            tools:layout_editor_absoluteY="260dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txt_distancia"
                android:layout_width="match_parent"
                android:layout_height="82dp"
                android:hint="hint" />
        </com.google.android.material.textfield.TextInputLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/btn_cancelar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="60dp"
        android:backgroundTint="#00FFFFFF"
        android:text="@string/cancelar_journey"
        android:textColor="#BFA181"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_Gvehiculo"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_Gvehiculo"
        android:layout_width="158dp"
        android:layout_height="50dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="60dp"
        android:backgroundTint="#178582"
        android:text="@string/guardar_journey"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/Txt_vista1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Tiempo_viaje_journey"
        android:textColor="#BFA181"
        android:textSize="26sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.071"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.037" />

</androidx.constraintlayout.widget.ConstraintLayout>