<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    >

    <ScrollView
        android:layout_width="419dp"
        android:layout_height="660dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="582dp">


                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="514dp"
                    android:layout_height="187dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/top_background"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/imageView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="@+id/imageView2"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.498"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imageView2"
                    app:layout_constraintVertical_bias="0.0"
                    tools:src="@tools:sample/avatars" />

                <TextView
                    android:id="@+id/Txt_perfil"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/Perfil"
                    android:textAlignment="center"
                    android:textColor="#BFA181"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/imageView6"
                    app:layout_constraintHorizontal_bias="0.492"
                    app:layout_constraintStart_toStartOf="@+id/imageView6"
                    app:layout_constraintTop_toBottomOf="@+id/imageView6"
                    app:layout_constraintVertical_bias="0.0" />

                <ScrollView
                    android:id="@+id/TxtInstrucciones"
                    android:layout_width="367dp"
                    android:layout_height="252dp"
                    android:padding="8dp"
                    android:text="Para poder usar las maracas tiene que mover tu celular para que suene."
                    android:textSize="24sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView">

                    <TextView
                        android:id="@+id/Txt_vista1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:text="@string/emision_1_perfil"
                        android:textAlignment="center"
                        android:textColor="#FFFFFF"
                        android:textSize="25sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="@+id/imageView6"
                        app:layout_constraintHorizontal_bias="0.492"
                        app:layout_constraintStart_toStartOf="@+id/imageView6"
                        app:layout_constraintTop_toBottomOf="@+id/imageView6"
                        app:layout_constraintVertical_bias="0.0" />


                </ScrollView>

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="perfil@gmail.com"

                    android:textColor="#FFFFFF"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toEndOf="@+id/Txt_perfil"
                    app:layout_constraintStart_toStartOf="@+id/Txt_perfil"
                    app:layout_constraintTop_toBottomOf="@+id/Txt_perfil" />


            </androidx.constraintlayout.widget.ConstraintLayout>

            <Button
                android:id="@+id/btn_registrase"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="32dp"
                android:layout_marginBottom="10dp"

                android:background="@drawable/btn_trans"
                android:text="@string/Cerrar_sesion_perfil"
                android:textColor="#BFA181" />
        </LinearLayout>


    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>